@@ -1,6 +1,9 @@
 Change Notes
 =============
 
+2010-04-08 RPF
+	- Added fall back in XLSTool while getting values from numeric formular cells to avoid exception and job stop
+
 2010-03-26 jbornema
 	- DataPoolInitializerUtil.ensureCube(String key, List<String> dimKeys, List<String> measureKeys, IDataPool.CubeType cubeType, List<String> ignoreDimKeys) added
 	  dimension keys in ignoreDimKeys do not trigger a cube replace if missing
